--- a/weather/scrapy.cfg
+++ b/weather/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = accuweather.settings
+default = weather.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = accuweather
+project = weather
